chore: integrate supabase typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
 
     "strict": false,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "tempo-routes": ["./src/tempo-routes"]
     }
   },
   "include": ["src"],
